Added SAP2000 API

--- a/Structural/beam_formulas.ipynb
+++ b/Structural/beam_formulas.ipynb
@@ -223,6 +223,39 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SymBeam examples suit\n",
+    "# ==========================================================================================\n",
+    "#                                                      António Carneiro <amcc@fe.up.pt> 2020\n",
+    "# Features: 1. Numeric length\n",
+    "#           2. Roller\n",
+    "#           3. Hinge\n",
+    "#           4. Fixed\n",
+    "#           5. Numeric distributed constant load\n",
+    "#           6. Numeric distributed quadratic load\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from symbeam import beam\n",
+    "\n",
+    "\n",
+    "test_beam = beam(4, x0=0)\n",
+    "test_beam.add_support(0, \"roller\")\n",
+    "test_beam.add_support(1, \"hinge\")\n",
+    "test_beam.add_support(4, \"fixed\")\n",
+    "test_beam.add_distributed_load(0, 2, \"-5\")\n",
+    "test_beam.add_distributed_load(2, 4, \"-(4*x**2 - 24 *x + 37)\")\n",
+    "test_beam.solve()\n",
+    "fig, ax = test_beam.plot()\n",
+    "\n",
+    "plt.savefig(__file__.split(\".py\")[0] + \".svg\")"
+   ]
   }
  ],
  "metadata": {
