--- a/Structural/Basics.ipynb
+++ b/Structural/Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +49,10 @@
     "\n",
     "# Code Cell 2: Calculate & Print\n",
     "force = calculate_force(m, a)\n",
-    "print(\"The resulting force is:\", force, \"Newtons\")\n",
+    "print(f\"The resulting force is: {force} Newtons\")\n",
     "\n",
     "# Visualization Cell 1: Bar Chart\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Setting Seaborn style (optional)\n",
-    "sns.set()\n",
     "\n",
     "# Data for bar chart\n",
     "categories = ['Mass', 'Acceleration', 'Force']\n",
@@ -79,6 +75,164 @@
     "plt.ylabel('Force (Newtons)')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'PyNite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Example of a basic 2D tension-only braced frame with gravity and lateral\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# loads. Units used for the model in this example are inches and kips\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Import `FEModel3D` from `PyNite`\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPyNite\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FEModel3D\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Create a new finite element model\u001b[39;00m\n\u001b[0;32m      8\u001b[0m braced_frame \u001b[38;5;241m=\u001b[39m FEModel3D()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'PyNite'"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of a basic 2D tension-only braced frame with gravity and lateral\n",
+    "# loads. Units used for the model in this example are inches and kips\n",
+    "\n",
+    "# Import `FEModel3D` from `PyNite`\n",
+    "from PyNite import FEModel3D\n",
+    "\n",
+    "# Create a new finite element model\n",
+    "braced_frame = FEModel3D()\n",
+    "\n",
+    "# Add nodes (frame is 15 ft wide x 12 ft tall)\n",
+    "braced_frame.add_node('N1', 0, 0, 0)\n",
+    "braced_frame.add_node('N2', 0, 12*12, 0)\n",
+    "braced_frame.add_node('N3', 15*12, 12*12, 0)\n",
+    "braced_frame.add_node('N4', 15*12, 0*12, 0)\n",
+    "\n",
+    "# Define column properties (use W10x33 from the AISC Manual):\n",
+    "Iy = 36.6 # in^4\n",
+    "Iz = 171 # in^4\n",
+    "J = 0.58 # in^4\n",
+    "A = 9.71 # in^2\n",
+    "\n",
+    "# Define a material\n",
+    "E = 29000 # ksi\n",
+    "G = 11400 # ksi\n",
+    "nu = 0.3  # Poisson's ratio\n",
+    "rho = 0.490/12**2  # Density (kci)\n",
+    "braced_frame.add_material('Steel', E, G, nu, rho)\n",
+    "\n",
+    "# Define the columns\n",
+    "braced_frame.add_member('Col1', 'N1', 'N2', 'Steel', Iy, Iz, J, A)\n",
+    "braced_frame.add_member('Col2', 'N4', 'N3', 'Steel', Iy, Iz, J, A)\n",
+    "\n",
+    "# Define beam properties (Use W8x24)\n",
+    "Iy = 18.3 # in^4\n",
+    "Iz = 82.7 # in^4\n",
+    "J = 0.346 # in^4\n",
+    "A = 7.08 # in^2\n",
+    "\n",
+    "# Define the beams\n",
+    "braced_frame.add_member('Beam', 'N2', 'N3', 'Steel', Iy, Iz, J, A)\n",
+    "braced_frame.def_releases('Beam', Ryi=True, Rzi=True, Ryj=True, Rzj=True)\n",
+    "\n",
+    "# Define the brace properties\n",
+    "# We'll use a section with L/r <= 300 which is a common rule of thumb for\n",
+    "# tension members. We'll use L4x4x1/4.\n",
+    "Iy = 3 # in^4\n",
+    "Iz = 3 # in^4\n",
+    "J = 0.0438 # in^4\n",
+    "A = 1.94 # in^2\n",
+    "\n",
+    "# Define the braces\n",
+    "braced_frame.add_member('Brace1', 'N1', 'N3', 'Steel', Iy, Iz, J, A,\n",
+    "                      tension_only=True)\n",
+    "braced_frame.add_member('Brace2', 'N4', 'N2', 'Steel', Iy, Iz, J, A,\n",
+    "                      tension_only=True)\n",
+    "\n",
+    "# Release the brace ends to form an axial member\n",
+    "braced_frame.def_releases('Brace1', Ryi=True, Rzi=True, Ryj=True, Rzj=True)\n",
+    "braced_frame.def_releases('Brace2', Ryi=True, Rzi=True, Ryj=True, Rzj=True)\n",
+    "\n",
+    "# Provide pinned supports at the bases of the columns (also restrained about\n",
+    "# the Y-axis for stability)\n",
+    "braced_frame.def_support('N1', support_DX=True, support_DY=True, support_DZ=True,\n",
+    "                          support_RY=True)\n",
+    "braced_frame.def_support('N4', support_DX=True, support_DY=True, support_DZ=True,\n",
+    "                          support_RY=True)\n",
+    "\n",
+    "# Stabilize the frame in the global Z-direction so it doesn't tip over\n",
+    "# out-of-plane.\n",
+    "braced_frame.def_support('N2', support_DZ=True)\n",
+    "braced_frame.def_support('N3', support_DZ=True)\n",
+    "\n",
+    "# Add self weight dead loads to the frame.\n",
+    "# Note that we could leave 'x1' and 'x2' undefined below and it would default\n",
+    "# to the full member length. Note also that the direction uses lowercase\n",
+    "# notations to indicate member local coordinate systems. Brace loads have been\n",
+    "# neglected.\n",
+    "braced_frame.add_member_dist_load('Beam', Direction='Fy', w1=-0.024/12,\n",
+    "                              w2=-0.024/12, x1=0, x2=15*12, case='D')\n",
+    "braced_frame.add_member_dist_load('Col1', Direction='Fx', w1=-0.033/12,\n",
+    "                              w2=-0.033/12, x1=0, x2=12*12, case='D')\n",
+    "braced_frame.add_member_dist_load('Col2', Direction='Fx', w1=-0.033/12,\n",
+    "                              w2=-0.033/12, x1=0, x2=12*12, case='D')\n",
+    "\n",
+    "# Add nodal wind loads of 25 kips to each side of the frame. Note that the\n",
+    "# direction uses uppercase notation to indicate model global coordinate\n",
+    "# system.\n",
+    "braced_frame.add_node_load('N2', Direction='FX', P=25, case='W')\n",
+    "braced_frame.add_node_load('N3', Direction='FX', P=25, case='W')\n",
+    "\n",
+    "# Create load combinations\n",
+    "# Note that the load combination '1.4D' has no lateral load, but does have\n",
+    "# gravity load. The gravity load forces the braces to receive minor\n",
+    "# compression, which causes them to be deactivated on the first iteration.\n",
+    "# Once deactivated the model is unstable and an exception is thrown. This is\n",
+    "# normal and correct behavior. Some programs allow for slight compression in\n",
+    "# tension-only members to avoid this problem. Load combination '1.4D' ahs been\n",
+    "# commented out, but you can uncomment it to see for yourself what happens.\n",
+    "\n",
+    "# braced_frame.add_load_combo('1.4D', factors={'D':1.4})\n",
+    "braced_frame.add_load_combo('1.2D+1.0W', factors={'D':1.2, 'W':1.0})\n",
+    "braced_frame.add_load_combo('0.9D+1.0W', factors={'D':0.9, 'W':1.0})\n",
+    "\n",
+    "# Analyze the braced frame\n",
+    "# P-Delta analysis could also be performed using braced_frame.analyze_PDelta().\n",
+    "# Generally, P-Delta analysis will have little effect on a model of a braced\n",
+    "# frame, as there is usually very little bending moment in the members.\n",
+    "braced_frame.analyze()\n",
+    "\n",
+    "# Display the deformed shape of the structure magnified 50 times with the text\n",
+    "# height 5 model units (inches) high\n",
+    "from PyNite.Visualization import Renderer\n",
+    "rndr = Renderer(braced_frame)\n",
+    "rndr.annotation_size = 5\n",
+    "rndr.deformed_shape = True\n",
+    "rndr.deformed_scale = 50\n",
+    "rndr.combo_name = '1.2D+1.0W'\n",
+    "rndr.window_width = 750\n",
+    "rndr.window_height = 750\n",
+    "rndr.render_model()\n",
+    "\n",
+    "# Plot the axial load diagrams for the braces. We should see no compression on\n",
+    "# 'Brace2' and 64 kips on 'Brace1' if the tension-only analysis worked\n",
+    "# correctly.\n",
+    "braced_frame.Members['Brace1'].plot_axial(combo_name='1.2D+1.0W')\n",
+    "braced_frame.Members['Brace2'].plot_axial(combo_name='1.2D+1.0W')\n",
+    "\n",
+    "# Report the frame reactions for the load combination '1.2D+1.0W'. We should\n",
+    "# see a -50 kip horizontal reaction at node 'N1', and a zero kip reaction at\n",
+    "# node 'N4' if the tension-only analysis worked correctly. Similarly, we\n",
+    "print('1.2D+1.0W: N1 reaction FY =',\n",
+    "      '{:.3f}'.format(braced_frame.Nodes['N1'].RxnFY['1.2D+1.0W']), 'kip')\n",
+    "print('1.2D+1.0W: N1 reaction FX =',\n",
+    "      '{:.3f}'.format(braced_frame.Nodes['N1'].RxnFX['1.2D+1.0W']), 'kip')\n",
+    "print('1.2D+1.0W: N4 reaction FY =',\n",
+    "      '{:.3f}'.format(braced_frame.Nodes['N4'].RxnFY['1.2D+1.0W']), 'kip')\n",
+    "print('1.2D+1.0W: N4 reaction FX =',\n",
+    "      '{:.3f}'.format(braced_frame.Nodes['N4'].RxnFX['1.2D+1.0W']), 'kip')"
    ]
   }
  ],
