--- a/Structural/SAP2000_API.ipynb
+++ b/Structural/SAP2000_API.ipynb
@@ -77,10 +77,7 @@
     " \n",
     "\n",
     "    #start SAP2000 application\n",
-    "    mySapObject.ApplicationStart()\n",
-    "\n",
-    "\n",
-    "\n"
+    "    mySapObject.ApplicationStart()"
    ]
   },
   {
